<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:padding="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="7dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- txtAccessが画像の下に置くんですがたまにtxtShopNameが長くて、2回改行するとtxtGenreとtxtEstimatedPriceがアクセスを上書きしてしまうので、 -->
        <!-- アクセス以外のViewは自分のRelLayoutに設定して、txtAccessがimageではなく、そのRelLayoutの下になります。そうすると一枚のCardViewが長くなる可能性があるが、絶対テキストが被らないのです。 -->
        <RelativeLayout
            android:id="@+id/relLayoutTopMostPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/txtShopName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:layout_toEndOf="@+id/image"
                android:text="@string/shop_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtShopName"
                android:layout_marginEnd="7dp"
                android:layout_toEndOf="@+id/image"
                android:text="@string/distance"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDistance"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="7dp"
                android:layout_toEndOf="@+id/image"
                android:text="@string/shop_genre"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtEstimatedPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDistance"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/txtGenre"
                android:text="@string/estimated_price"
                android:textSize="12sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txtAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relLayoutTopMostPanel"
            android:layout_marginStart="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:text="@string/access"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>